added bootstrap example

--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -8,7 +8,8 @@ import Plugin from './assets/plugin.svg';
 import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
 
-<Meta title="Example/Introduction" />
+[//]: # (Change the directory of the component for MDX using the meta tag)
+<Meta title="example/Introduction" />
 
 <style>
   {`
