updated doc and added startup script for docker-compose for development

--- a/src/stories/ProjectOverview.stories.mdx
+++ b/src/stories/ProjectOverview.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from '@storybook/addon-docs';
+import RepoRelation from './assets/repo-relation.png';
 
 <Meta title="IT5007 Project Overview" />
 
@@ -8,6 +9,10 @@ In the panel to the left are pages for different components used in the project 
 These are example components provided by Storybook.js that may help with testing out different React components.
 
 Key information to note:
+
+# Repository images / location
+<img src={RepoRelation} alt="Repository elements"/>
+
 For MDX files:
 ```js
 import { Meta } from '@storybook/addon-docs'; // Imports the Meta
