--- a/src/stories/ProjectOverview.stories.mdx
+++ b/src/stories/ProjectOverview.stories.mdx
@@ -5,6 +5,22 @@ import RepoRelation from './assets/repo-relation.png';
 
 # IT5007 Project overview
 
+### Ideas
+- Mods scheduler API - NUS mods
+- Group scheduling
+  - One admin starts an event
+  - other people select availabilities depending on what admin had outlined
+  - API: Google calenders
+- Review websites for NUS Mods
+- Something more dedicated, less like forums
+- More structured
+- Formalise having fields on different properties
+- And incentivise students to leave reviews using a method, eg.
+- Leave review to unlock more
+- Cooking recipe app, pull recipes based on ingredients etc
+
+
+Proceed with database check for authentication
 In the panel to the left are pages for different components used in the project that can be tested individually.
 These are example components provided by Storybook.js that may help with testing out different React components.
 
@@ -12,6 +28,11 @@ Key information to note:
 
 # Repository images / location
 <img src={RepoRelation} alt="Repository elements"/>
+
+
+
+
+Proceed with database check for authentication
 
 For MDX files:
 ```js
